// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find reset points correctly 1`] = `
Array [
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`hourly interpolate correctly 1`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 2,
  "hour": "01",
  "low": 2,
  "minute": 0,
  "open": 2,
  "source": "source",
  "timestamp": 1528246800000,
  "volume": 0,
}
`;

exports[`hourly interpolate correctly 2`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 2,
  "hour": "02",
  "low": 2,
  "minute": 0,
  "open": 2,
  "source": "source",
  "timestamp": 1528250400000,
  "volume": 0,
}
`;

exports[`hourly interpolate correctly 3`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 3,
  "hour": "03",
  "low": 0,
  "minute": 0,
  "open": 1,
  "source": "source",
  "timestamp": 1528254000000,
  "volume": 246,
}
`;

exports[`merge last price to accepted price correctly 1`] = `
Object {
  "blockNumber": 0,
  "navA": 1.23,
  "navB": 1.45,
  "price": 620,
  "timestamp": 1529643600000,
  "transactionHash": "",
}
`;

exports[`merge reset correctly 1`] = `
Array [
  Object {
    "blockNumber": 111,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 1000,
    "transactionHash": "aaa",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 2,
    "price": 123,
    "timestamp": 2000,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 222,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 2717,
    "transactionHash": "bbb",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 0.25,
    "price": 123,
    "timestamp": 3000,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 333,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 3717,
    "transactionHash": "ccc",
  },
  Object {
    "blockNumber": 444,
    "navA": 1.1,
    "navB": 1,
    "price": 123,
    "timestamp": 4000,
    "transactionHash": "ddd",
  },
  Object {
    "blockNumber": 444,
    "navA": 1,
    "navB": 1,
    "price": 123,
    "timestamp": 4717,
    "transactionHash": "ddd",
  },
]
`;

exports[`merge total supply correctly 1`] = `
Array [
  Object {
    "blockNumber": 111,
    "timestamp": 1234567890,
    "tokenA": 123,
    "tokenB": 456,
    "transactionHash": "abc",
  },
  Object {
    "blockNumber": 0,
    "timestamp": 2345678901,
    "tokenA": 1234,
    "tokenB": 2345,
    "transactionHash": "",
  },
]
`;

exports[`minutely interpolate correctly 1`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 2,
  "hour": "00",
  "low": 2,
  "minute": 1,
  "open": 2,
  "source": "source",
  "timestamp": 1528243260000,
  "volume": 0,
}
`;

exports[`minutely interpolate correctly 2`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 2,
  "hour": "00",
  "low": 2,
  "minute": 2,
  "open": 2,
  "source": "source",
  "timestamp": 1528243320000,
  "volume": 0,
}
`;

exports[`minutely interpolate correctly 3`] = `
Object {
  "close": 2,
  "date": "2018-06-06",
  "high": 3,
  "hour": "00",
  "low": 0,
  "minute": 3,
  "open": 1,
  "source": "source",
  "timestamp": 1528243380000,
  "volume": 246,
}
`;
